app/components/elements/ModalBox/style.scss
@import "styles/colors.scss";
@import "styles/mixins.scss";

.modal-overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: $overlay-color;
  z-index: 1000;
  display: flex;
  justify-content: center;
  align-items: center;

  .modal {
    position: relative;
    background-color: $bg-color-1;
    color: $font-color-1;
    font-family: ITC Officina Sans Std, Helvetica;

    &.modal-id-about {
      .close-button {
        display: none;
      }
    }

    @media #{$mq-desktop} {
      width: 800px;

      &.modal-id-about {
        width: 1000px;
        height: 600px;
      }
    }

    @media #{$mq-mobile} {
      width: 90%;
      max-height: 90%;
      overflow-y: auto;

      &.modal-id-about {
        width: 100%;
        height: 100%;
        max-height: 100%;

        .close-button {
          display: none;
        }
      }
    }

    &.modal-id-impactLegend,
    &.modal-id-reachLegend {
      padding: 10px;
      max-width: 410px;
    }
  }

  .close-button {
    @include close-button;
    @media #{$mq-desktop} {
      top: 40px;
      right: -16px;
    }
    @media #{$mq-mobile} {
      top: 10px;
      right: 10px;
      box-shadow: none;
    }
   }

}

